# ohtu-s23-miniprojekti

./: .coveragerc  .env.test  .gitignore  .pylintrc  LICENSE  Procfile  README.md  example.env  fly.toml  pyproject.toml  retro.md  run_robot_tests.sh  schema.sql  tasks.py
.github/workflows/: deployment.yml  main.yml
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/api/: referenceService.js
frontend/src/components/: AddReferenceForm.js  AppTitle.js  DoiForm.js  ReferenceForm.js  ReferenceList.js
frontend/src/components/ReferenceForm/: ArticleForm.js  BookForm.js  Dropdown.js  Form.css  FormContainer.js
frontend/src/components/ReferenceTable/: ReferenceTable.js  ReferenceTableHead.js  ReferenceTableToolbar.js  referenceTableUtil.js
frontend/src/util/: DoiUtil.js  bibTexUtil.js  fetchUtil.js
retro/: retro.md  retro2.md  retro3.md
src/: AppLibrary.py  app.py  dataprocessing.py  db.py  routes.py
src/entities/: reference.py
src/services/: reference_services.py
src/tests/: AppLibrary.py  resource.robot  test-schema.sql  test_add_reference.robot  test_dataprocessing.py  test_reference.robot
src/tests/entities/: test_reference.py
src/tests/services/: test_reference_services.py
