[tool.poetry]
name = "ohtu-s23-miniprojekti"
version = "0.1.0"
description = ""
authors = ["Tartsi <tarvo.lilja@hotmail.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
pylint = "^3.0.2"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
